ci: test disabling verbose mode for clj-holmes
Signed-off-by: Robin Lahtinen <robin.lahtinen@gmail.com>

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -29,6 +29,7 @@ jobs:
                     output-type: "sarif"
                     output-file: "clj-holmes-results.sarif"
                     fail-on-result: "true"
+                    verbose: "false"
 
             -   name: Upload analysis results to GitHub Security tab
                 uses: github/codeql-action/upload-sarif@v4
