--- a/.github/workflows/outdated-dependencies.yml
+++ b/.github/workflows/outdated-dependencies.yml
@@ -14,3 +14,5 @@ jobs:
         steps:
             -   uses: actions/checkout@v6
             -   uses: liquidz/antq-action@main
+                with:
+                    skips: github-action
